--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.1",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^3.11"
     },
     "require-dev": {
